MGNLUI-848 fixed z-index modal vs. action bar

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/dialog.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/dialog.scss
@@ -85,7 +85,7 @@
 /* Set proper stacking for modals */
 .modal.app,
 .modal.sub-app {
-    z-index:50;
+    z-index: 110;
     overflow: hidden;
 }
 
